# hanabi-competitions

./: .env_template  Cargo.toml  README.md  down.sql  install.sh  install_db_skeleton.sh  schema.sql
db/: 0.2.0_down.sql  0.2.0_up.sql
schema_migrations/: 01.sql
script/: install.sh  install_db_skeleton.sh
src/: main.rs  model.rs  routes.rs
src/hlc/: model.rs  routes.rs
src/model/: competition.rs  game.rs  result.rs  series.rs  variant.rs
src/model/competition/results/: flat.rs  nested.rs
src/routes/: competitions.rs  games.rs  index.rs  results.rs  series.rs  variants.rs
src/routes/competitions/results/: flat.rs  nested.rs
static/: about.css  about.html  contact.html  format_fractional_mp.js  index.js  main.css  results.css  simpleSelect.css  simpleSelect.js  table_sort.js
static/templates/: combined_results.html  competition.html  index.html  results_flat.html  results_nested.html  series.html
