[package]
name = "hanabi_live_competitions"
version = "0.1.0"
authors = ["Aaron Liblong <liblonga@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.9"
listenfd = "0.3.3"
actix-web = "2.0.0"
actix-rt = "1.1.0"
serde = "1.0.106"
serde_json = "1.0.51"
chrono = {version = "*", features = ["serde"]}
serde_qs = {version = "0.6", features=["actix"]}
sqlx = { version = "0.3", features = [ "postgres", "chrono" ] }
futures = "0.3.4"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
anyhow = "1.0.28"
